--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,9 @@ body {
     font-size: 1.2rem;
     background: linear-gradient(109.6deg, rgb(36, 45, 57) 11.2%, rgb(16, 37, 60) 51.2%, rgb(0, 0, 0) 98.6%);
 }
-.header a {
-    text-decoration: none;
-    color: white;
-    margin: 0px 15px;
-    font-weight: 800;
-    font-size: 30px;
-    cursor: pointer;
-}
+/* 
+    Início do cabeçalho da página
+*/
 .header {
     display: flex;
     justify-content: space-between;
@@ -22,66 +17,119 @@ body {
     background-color: black;
 }
 
+.header > a {
+    text-decoration: none;
+    color: white;
+    margin: 0px 15px;
+    font-weight: 600;
+    font-size: 30px;
+    cursor: pointer;
+}
+
 .menu {
     list-style: none;
     display: flex;
+    margin-right: 30px;
+    flex-wrap: wrap;
 }
 
 .menu li {
     margin-left: 10px;
+    padding: 8px;
+    text-transform: uppercase;
+}
+
+.menu li:hover{
+    background-color: #fff;
+    transition: 1s;
 }
 
 .menu li a {
-    display: block;
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
+    padding: 10px 0;
+}
+
+.menu li a:hover {
+    color: #000;
+    transition: .5s;
+}
+
+/* 
+    Início da section 1
+*/
+
+#section1 {
+    margin-top: 200px;
+}
+
+.container {
+    margin: 0 10%;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    gap: 2rem;
     padding: 10px;
 }
 
-#section1 {
-    margin: 200px 10% 0 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-}
-.imagem img{
+.imagem-sobre img {
     border-radius: 50%;
-    width: 300px;
+    width: 350px;
+    margin-top: 100px;
+    padding: 0;
+}
+
+.nome-e-local {
+    padding-bottom: 10px;
 }
 
 .nome {
-    max-width: 100%;
-    font-size: 80px;
-    padding: 10px;
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 88px;
     color: white;
+    margin-top: 0;
 }
 
 .local {
-    max-width: 90%;
+    padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 0;
     color: white;
     font-size: 20px;
-    display: inline;
 }
 
 .descricao {
     color: white;
     font-size: 20px;
+    margin-bottom: 10px;
+    line-height: 28px;
 }
 
 .icons {
-    max-width: 90%;
     display: flex;
     justify-content: start;
     align-items: center;
 }
 
-.icons a img {
-    height: 50px;
-    padding: 10px 0 0 20px;
-    filter: brightness(0) saturate(100%) invert(100%) sepia(1%) saturate(2%) hue-rotate(289deg) brightness(103%) contrast(100%);
+.icons a {
+    font-size: 40px;
+    color: white;
+    padding: 0px 10px 0 10px;
 }
 
+.icons a:hover {
+    color: #0155a3;
+    transition: .5s;
+}
+
+/* 
+    Início da section 2
+*/
+
 .nome-habilidades {
-    margin: 200px auto 200px auto;
+    margin: 300px auto 200px auto;
     font-size: 90px;
     text-align: center;
     padding: 10px;
@@ -161,13 +209,15 @@ body {
 }
 
 .arrow {
-    filter: brightness(0) saturate(100%) invert(17%) sepia(48%) saturate(3784%) hue-rotate(225deg) brightness(94%) contrast(121%);
     height: 100px;
     display: flex;
     justify-content: end;
     align-items: center;
     margin-right: 20px;
 }
+/* 
+    Início do Rodapé
+*/
 
 footer {
     display: flex;
