upgrade style.css

--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,10 @@ body {
     font-size: 25px;
 }
 
+/* 
+    Início da section 3
+*/
+
 .nome-projetos {
     margin: 200px auto 200px auto;
     font-size: 90px;
